--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "thugkeed-ai-builder",
   "version": "1.0.0",
-  "description": "AI powered app creation tool by THUGKEED TECH",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2"
   }
 }
